--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.6.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
